# temp-mix

./: CMakeLists.txt  diagram.json  sdkconfig  sdkconfig.old  wokwi.toml
components/mycomp/: CMakeLists.txt  mycomp.c  mycomp.h
components/rust-temp-mix/: CMakeLists.txt  Cargo.toml
components/rust-temp-mix/src/: lib.rs
main/: main.c
